feat: Update configuration and documentation for enhanced query handling
- Added new environment variables for maximum sub-queries, ambiguity model, and retrieval confidence threshold to improve query decomposition and handling.
- Introduced a comprehensive README.md to document the architecture, project structure, quick start guide, and configuration reference for the multimodal RAG pipeline.

--- a/.env.example
+++ b/.env.example
@@ -93,6 +93,7 @@ TOP_K_AUDIO=3
 USE_MMR=true
 MMR_LAMBDA=0.5
 RETRIEVAL_CONFIDENCE_THRESHOLD=0.2
+MAX_SUB_QUERIES=5
 
 # ===============================
 # HyDE / Query Rewriting
@@ -154,8 +155,21 @@ QUERY_CACHE_TTL_SECONDS=600
 # LangGraph / Pipeline
 # ===============================
 ENABLE_QUERY_CLASSIFICATION=true
-ENABLE_CLARIFICATION_LOOP=false
 GRAPH_MAX_RETRIES=2
+
+# ===============================
+# Ambiguity / Clarification
+# ===============================
+AMBIGUITY_MODEL=gpt-4.1-mini
+AMBIGUITY_TIMEOUT=15
+
+# ===============================
+# Retrieval Confidence
+# ===============================
+# Distance threshold below which retrieval is considered confident.
+# Values ≈ 0.2–0.4 are typical for cosine distance.
+# Set to 0 to disable the confidence gate.
+RETRIEVAL_CONFIDENCE_THRESHOLD=0.2
 
 # ===============================
 # Observability & Tracing
