feat: Update environment configuration and .gitignore for MongoDB and LangSmith integration
- Added new environment variables for MongoDB connection and LangSmith tracing to the .env.example file.
- Enhanced .gitignore to include additional patterns for logs, IDE configurations, and Python cache files, improving project cleanliness.
- Updated requirements.txt to include pymongo and langsmith packages for database and tracing functionalities.

--- a/.env.example
+++ b/.env.example
@@ -178,3 +178,18 @@ ENABLE_TRACING=false
 TRACE_SAMPLE_RATE=1.0
 OTEL_EXPORTER_OTLP_ENDPOINT=http://localhost:4317
 REQUEST_ID_HEADER=x-request-id
+
+
+
+# ===============================
+# MongoDB
+# ===============================
+MONGO_URI=mongodb://localhost:27017/advanced-rag
+
+# ===============================
+# LangSmith
+# ===============================
+LANGSMITH_TRACING=true
+LANGSMITH_ENDPOINT=https://api.smith.langchain.com
+LANGSMITH_API_KEY= your_langsmith_api_key
+LANGSMITH_PROJECT=advanced-rag
