--- a/requirements.txt
+++ b/requirements.txt
@@ -103,3 +103,13 @@ opentelemetry-exporter-otlp>=1.23.0
 fastapi>=0.110.0
 uvicorn>=0.29.0
 httpx>=0.27.0
+
+# ===============================
+# Database (MongoDB)
+# ===============================
+pymongo[srv]>=4.7.0     # [srv] enables Atlas mongodb+srv:// URIs
+
+# ===============================
+# LangSmith Tracing
+# ===============================
+langsmith>=0.1.0
