chore: Update Node.js version and dependencies- Updated Node.js version in .nvmrc to 22.13.0.- Changed Node.js version in CI workflow to 22.- Added new imports and configuration in frontend files for improved TypeScript support and Tailwind CSS integration.- Updated package.json and package-lock.json to include new dependencies and versions, including @tailwindcss/postcss and others.

--- a/.lintstagedrc
+++ b/.lintstagedrc
@@ -13,5 +13,5 @@
   "scripts/**/*.py": ["ruff check --fix"],
   "utils/**/*.py": ["ruff check --fix"],
   "vectorstores/**/*.py": ["ruff check --fix"],
-  "frontend/**/*.{js,jsx,ts,tsx}": ["cd frontend && npm run lint"]
+  "frontend/**/*.{js,jsx,ts,tsx}": ["npm run lint --prefix frontend"]
 }
